# noto

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean  test.asm
include/: extras.h  gf_profiling.h  pokkenizer.h  stdint.h
source/: extras.c  gf_profiling.c  main.c
source/asm/: common.inc  pokkenizer.asm  strlen.asm  strtoktok_r.asm
